Developer Expense Type CRUD Operation with controller and view, generated migration with FK inside the Expense

--- a/InAndOut/InAndOut.csproj
+++ b/InAndOut/InAndOut.csproj
@@ -23,6 +23,7 @@
     <None Remove="Views\Expense\" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Pages" />
     <Folder Include="Views\Appointment\" />
     <Folder Include="Data\" />
     <Folder Include="Views\Item\" />
