--- a/InAndOut/appsettings.json
+++ b/InAndOut/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433\\Catalog=InAndOut;Database=InAndOut;User=SA;Password=MyPass@word;"
-    //"DefaultConnection": "Server=.,1443; Database=InAnOut; Trusted_Connection=True; MultipleActiveResultSets=True"
+    "DefaultConnection": "Server=localhost,1433\\Catalog=InAndOut;Database=InAndOut;User=SA;Password=MyPass@word; MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
